# IEEEr5_Robotics_Comp

./: IMUforRobot.ino  README.md  TeensyIR_Camera_Code.ino  read_all_data.ino
IR camera ROS code/: mlx90640_serial.py  package.xml  setup.py  thermal_visualizer.py
TeensyIR_Camera_Code/MLXHeatCam/: MLXHeatCam.pde
