<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mlx90640_ros2</name>
  <version>0.0.1</version>  <!-- Match version with setup.py -->
  <description>ROS2 driver for MLX90640 thermal imaging sensor</description>
  <maintainer email="grant@example.com">grant</maintainer>
  <license>MIT</license>  <!-- Match license with setup.py -->

  <!-- Add dependencies if you have any -->
  <!-- <depend>rclpy</depend> -->
  <!-- <depend>sensor_msgs</depend> -->

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>